--- a/index.html
+++ b/index.html
@@ -1,1 +1,127 @@
-Colmar Academy
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <title>Wanting Academy</title>
+</head>
+
+<body>
+    <header>
+        <div class="title">
+            <div id="logo">
+                <img src="resources/images/ic-logo.svg" alt="Business Logo">
+            </div>
+            <div id="brand">
+                <strong>WANTING</strong>
+                <span>ACADEMY</span>
+            </div>
+        </div>
+        <div class="navigation">
+            <nav>
+                <ul class="desktop">
+                    <li><a href="#">On campus</a></li>
+                    <li><a href="#">Online</a></li>
+                    <li><a href="#">Real world</a></li>
+                    <a href="#"><button>Login</button></a>
+                </ul>
+            </nav>
+            <nav>
+                <ul class="mobile">
+                    <li><a href="#"><img src="resources/images/ic-on-campus.svg" alt="On Canpus"></a></li>
+                    <li><a href="#"><img src="resources/images/ic-online.svg" alt="Online"></a></li>
+                    <li><a href="#"><i class="fas fa-globe-americas"></i></a></li>
+                    <button><a href="#"><img src="resources/images/ic-login.svg" alt="Login"></a></button>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    
+    <div class="main">
+        <!-- Banner -->
+        <div class="banner">
+            <div class="image-container">
+                <img src="resources/images/banner.jpg" alt="banner picture">
+            </div>
+            <div class="text-container">
+                <div class="text">
+                    <h1>Afterwork learning can be easy</h1>
+                    <h3>Learn skills to raise your pay at spare time.</h3>
+                </div>
+                <div class="CTA-sign-up">
+                    <span>Start here</span>
+                </div>
+            </div>
+        </div>
+        <!-- On Campus -->
+        <div class="campus">
+            <div class="campus-goal">
+                <div class="image-container">
+                    <img src="resources/images/information-main.jpg" alt="on campus learning">
+                </div>
+                <div class="text-container">
+                    <h2>It doesn't hurt keep practicing</h2>
+                    <h4>
+                        “Those people who develop the ability to continuously acquire new and better forms of knowledge that they can apply to their work and to their lives will be the movers and shakers in our society for the indefinite future.”
+                    </h4>
+                    <h5>Brain Tracy</h5>
+                </div>
+            </div>
+
+            <div class="campus-features"> 
+                <div class="cf1">
+                    <div class="image-container">
+                        <img src="resources/images/information-orientation.jpg" alt="orientation">
+                    </div>
+                    <div class="text-container">
+                        <h3>Explore free orientation</h3>
+                        <h4>..description needed</h4>
+                        <a id="read-more" href="#">Read more</a>
+                    </div>
+                </div>
+                <div class="cf2">
+                    <div class="image-container">
+                        <img src="resources/images/information-campus.jpg" alt="campus">
+                    </div>
+                    <div class="text-container">
+                        <h3>Find campus close to you</h3>
+                        <h4>..description needed</h4>
+                        <a id="read-more" href="#">Read more</a>
+                    </div>
+                </div>
+                <div class="cf3">
+                    <div class="image-container">
+                        <img src="resources/images/information-guest-lecture.jpg" alt="lecturer">
+                    </div>
+                    <div class="text-container">
+                        <h3>Connect with lectuers</h3>
+                        <h4>..description needed</h4>
+                        <a id="read-more" href="#">Read more</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Online -->
+        <div class="online">
+
+        </div>
+        <!-- Real World -->
+        <div class="realworld">
+
+        </div>
+    </div>
+
+    <footer>
+        <div class="copyright">
+            <span>© 2016 Wanting Academy. All Rights Reserved</span>
+        </div>
+        <div class="policy">
+            <span>Terms</span>
+            <span>Privacy</span>
+        </div>
+    </footer>
+    
+</body>
+</html>
