--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
                     <h3>Learn skills to raise your pay at spare time.</h3>
                 </div>
                 <div class="CTA-sign-up">
-                    <span>Start here</span>
+                    <span>Start now</span>
                 </div>
             </div>
         </div>
         <div class="products">
             <!-- On Campus -->
             <div class="campus" id="campus">
-                <div class="campus-pitch">
+                <div class="campus-summary">
                     <div class="image-container">
                         <img src="resources/images/information-main.jpg" alt="on campus learning">
                     </div>
